Fixing button background colour on mobile

--- a/login.css
+++ b/login.css
@@ -25,7 +25,7 @@ h1 {
 
 .btn {
     color: white;
-    background-color: #1DB954;
+    background: #1DB954;
     font-size: 20px;
     border: none;
     border-radius: 25px;
